--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -45,6 +45,8 @@ body {
     text-align: center;
     height: 78rem;
     margin-top: 0;
+    position: fixed;
+    left: 0;
 
     &--text {
         margin-top: 0;
@@ -124,4 +126,10 @@ body {
     display: flex;
     margin: 0 auto;
     justify-content: space-around;
+}
+
+.promoted--stream--header {
+    color: rgb(216, 214, 214);
+    font-size: 2rem;
+    padding-left: 100rem;
 }
