--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Font-3";
+    src: url("../../assets/fonts/Font-3.ttf") format("truetype");
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -36,6 +41,8 @@
 
 body {
     background: linear-gradient(to bottom, rgb(62, 7, 89), rgb(159, 93, 170));
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .sidebar {
@@ -128,8 +135,98 @@ body {
     justify-content: space-around;
 }
 
-.promoted--stream--header {
-    color: rgb(216, 214, 214);
-    font-size: 2rem;
-    padding-left: 100rem;
+
+.promoted {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+
+    &--stream--header {
+        color: rgb(203, 187, 187);
+        font-size: 2rem;
+        text-align: center;
+        padding-right: 10rem;
+
+    }
+
+    &--video {
+        width: 50%;
+        padding: .5rem;
+        border-radius: 4px;
+
+    }
+}
+
+.sidebar2 {
+    width: 20%;
+    background-color: #0f1014;
+    color: white;
+    text-align: center;
+    height: 78rem;
+    margin-top: 0;
+    position: fixed;
+    right: 0;
+    top: 5rem;
+    overflow-y: auto;
+
+    .button--container2 {
+        width: 100%;
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-around;
+    }
+}
+
+.card-img2 {
+    height: 10rem;
+    width: 90%;
+    padding: 1rem;
+}
+
+.card2 {
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 90%;
+    margin-bottom: 2rem;
+}
+
+.test {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.streamer {
+    color: rgb(203, 187, 187);
+}
+
+.card3 {
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 90%;
+    margin-bottom: 2rem;
+}
+
+.switchgame-button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.3s ease-in-out;
+}
+
+.switchgame-button:hover {
+    transform: scale(110%)
 }
