--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -122,6 +122,10 @@ body {
         transition: all 0.3s ease-in-out;
     }
 
+    &-play:hover {
+        background-color: #666;
+    }
+
 }
 
 .card-button:hover {
@@ -183,6 +187,7 @@ body {
     height: 10rem;
     width: 90%;
     padding: 1rem;
+    object-fit: contain;
 }
 
 .card2 {
