--- a/src/Components/SpaceInvaders/SpaceGamePage.scss
+++ b/src/Components/SpaceInvaders/SpaceGamePage.scss
@@ -126,3 +126,22 @@ canvas {
     top: 7.5rem;
     left: 8rem;
 }
+
+.game-over-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content1 {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
