--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -23,6 +23,7 @@
 
 .pac-text {
     color: black;
+    font-size: 1.4rem;
 }
 
 
@@ -46,7 +47,7 @@
 
 body {
     background: linear-gradient(to right, rgb(62, 7, 89), rgb(159, 93, 170));
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: 100vh;
 }
 
@@ -166,7 +167,6 @@ body {
         width: 50%;
         padding: .5rem;
         border-radius: 4px;
-
     }
 }
 
