--- a/src/Components/Tetris/ActivePacMan.scss
+++ b/src/Components/Tetris/ActivePacMan.scss
@@ -2,20 +2,20 @@
     position: relative;
 }
 
-.Boardcell {
+.BoardCell {
     width: auto;
     border-radius: 6px;
     position: relative;
 }
 
-.tetromino {
+.tetrimino {
     border-top: 3px solid rgba(255, 255, 255, 0.1);
     border-left: 3px solid rgba(255, 255, 255, 0.1);
     border-bottom: 3px solid rgba(0, 0, 0, 0.1);
     border-right: 3px solid rgba(0, 0, 0, 0.1);
 }
 
-.sparkle {
+.tetrimino .sparkle {
     position: absolute;
     z-index: 10;
     width: 6px;
@@ -26,35 +26,35 @@
     border-radius: 4px 4px;
 }
 
-.tetromino.ghost .sparkle {
+.tetrimino.ghost .sparkle {
     opacity: 0;
 }
 
-.tetromino__i {
+.tetrimino__i {
     background-color: rgba(80, 227, 230, 1);
 }
 
-.tetromino__j {
+.tetrimino__j {
     background-color: rgba(69, 95, 223, 1);
 }
 
-.tetromino__l {
+.tetrimino__l {
     background-color: rgba(223, 173, 36, 1);
 }
 
-.tetromino__o {
+.tetrimino__o {
     background-color: rgba(223, 217, 36, 1);
 }
 
-.tetromino__s {
+.tetrimino__s {
     background-color: rgba(48, 211, 56, 1);
 }
 
-.tetromino__t {
+.tetrimino__t {
     background-color: rgba(132, 61, 198, 1)
 }
 
-.tetromino__z {
+.tetrimino__z {
     background-color: rgba(240, 80, 195, 1);
 }
 
@@ -90,6 +90,7 @@
     bottom: 0;
     text-align: left;
     color: white;
+    padding-right: 15rem;
 
 }
 
