--- a/src/Components/Leaderboards/Leaderboards.scss
+++ b/src/Components/Leaderboards/Leaderboards.scss
@@ -2,3 +2,27 @@
     display: flex;
     justify-content: center;
 }
+
+.leaderboard--text--tetris {
+    color: black;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.leaderboard--text {
+    color: black;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#leaderboard {
+    width: 40rem;
+    margin-left: 5rem;
+    margin: 0 auto;
+}
