--- a/src/Components/Tetris/ActiveTetris.scss
+++ b/src/Components/Tetris/ActiveTetris.scss
@@ -129,3 +129,9 @@
     top: -100em;
 
 }
+
+.leaderboards--container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
