--- a/src/Components/Leaderboards/Leaderboards.scss
+++ b/src/Components/Leaderboards/Leaderboards.scss
@@ -13,6 +13,7 @@
     color: black;
     font-size: 2rem;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .flex {
@@ -24,7 +25,6 @@
 #leaderboard {
     width: 40rem;
     margin: 0 auto;
-
     margin-left: 5rem;
 
 }
