--- a/src/Components/SpaceInvaders/SpaceGamePage.scss
+++ b/src/Components/SpaceInvaders/SpaceGamePage.scss
@@ -40,7 +40,7 @@ canvas {
     margin-top: 50px;
 
     &--text {
-        margin-bottom: 0;
+        margin-bottom: 1rem;
     }
 
     &--container {
