--- a/src/Components/SpaceInvaders/SpaceGamePage.scss
+++ b/src/Components/SpaceInvaders/SpaceGamePage.scss
@@ -198,6 +198,10 @@ canvas {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        position: absolute;
+        top: 30%;
+        left: 8%;
+        width: 85%;
     }
 
 }
@@ -211,9 +215,26 @@ canvas {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        position: absolute;
+        top: 65%;
+        left: 14%;
+        width: 70%;
     }
 }
 
 .controls-container {
     align-items: center;
+}
+
+.modal--container2 {
+    background-color: #dadfe1;
+    height: 13rem;
+    border-radius: 10px;
+    text-align: center;
+    padding: 3rem 1rem 0rem 1rem;
+    margin: 0 auto;
+    margin-top: 1rem;
+    width: 50%;
+    position: relative;
+    height: 27rem;
 }
