--- a/src/Components/GameRoom/GameRoom.scss
+++ b/src/Components/GameRoom/GameRoom.scss
@@ -8,3 +8,8 @@
     font-size: 2rem;
     padding-left: 10rem;
 }
+
+.activecard--container1 {
+    padding-right: 30rem;
+    padding-top: 5rem;
+}
