small stlying shcanges game room

--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -85,8 +85,10 @@ body {
 
 .card-img {
     display: block;
-    width: 100%;
+    width: 70%;
     height: auto;
+    margin: 0 auto;
+    padding-top: 1rem;
 }
 
 .card-body {
